# cmake_empty_project

./: CMakeLists.txt  README.md
tests/: test1.cpp
